Fixed white space bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 /* Sticky Footer */
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
 body {
     display: flex;
     min-height: 100vh;
